--- a/exercicio-angular/angular.json
+++ b/exercicio-angular/angular.json
@@ -1,23 +1,19 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "cli": {
-    "packageManager": "npm",
-    "analytics": "6f705a7c-b07d-4506-98af-bca0b9d86dbb"
-  },
   "newProjectRoot": "projects",
   "projects": {
-    "exercicio-angular": {
+    "lds-frontend": {
       "projectType": "application",
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "lds",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/exercicio-angular",
+            "outputPath": "dist/lds-frontend",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -29,6 +25,10 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/ngx-toastr/toastr.css",
+
               "src/styles.css"
             ],
             "scripts": []
@@ -61,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "exercicio-angular:build:production"
+              "buildTarget": "lds-frontend:build:production"
             },
             "development": {
-              "buildTarget": "exercicio-angular:build:development"
+              "buildTarget": "lds-frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -72,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "exercicio-angular:build"
+            "buildTarget": "lds-frontend:build"
           }
         },
         "test": {
@@ -95,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "7edb4146-7ff0-435c-ac61-53b10df5cdab"
   }
 }
